--- a/www/prayertimes.html
+++ b/www/prayertimes.html
@@ -137,8 +137,25 @@
 <script src="js/jquery-1.11.3.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="js/bootstrap.js"></script>
+<script src="cordova.js"></script>
 
 <script src="js/prayerMonth.js"></script>
+
+<script>
+	document.addEventListener('deviceready', function(){
+		navigator.geolocation.getCurrentPosition(function(position){
+			alert(position.coords.latitude);
+			if (position != null){
+				debugger;
+				document.getElementById("latitude").value = position.coords.latitude;
+				document.getElementById("longitude").value = position.coords.longitude;
+			}
+		}
+        );
+	}, false);
+
+
+</script>
 
 </body>
 </html>
