--- a/www/prayertimes.html
+++ b/www/prayertimes.html
@@ -27,6 +27,7 @@
 		.head-row {color: black; background-color: #eef;}
 		.today-row {background-color: #F8F7F4; color: black}
 		.subMenu {list-style: none;}
+		input, select { min-width: 100px;}
 	</style>
 </head>
 
@@ -61,7 +62,7 @@
 		</div>
 		<div class="header contentBody">
 			<form class="form" action="javascript:update();">
-				<div class="container">
+				<div class="row">
 					<div class="col-md-3 col-sm-6 col-xs-6">
 						<div class="col-md-6 col-sm-6 col-xs-6">Latitude:</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
@@ -92,7 +93,7 @@
 						</div>
 					</div>
 
-					<div class="container">
+					<div class="row">
 						<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="col-md-3 col-sm-3 col-xs-3">Method:</div>
 							<div class="col-md-9 col-sm-9 col-xs-9">
