--- a/platforms/android/assets/www/prayertimes.html
+++ b/platforms/android/assets/www/prayertimes.html
@@ -211,6 +211,16 @@
 							</div>
 						</div>
 					</div>
+					<div class="row formOptions">
+						<div class="col-md-12 col-sm-12 col-xs-12 formRow">
+						<div class="col-md-3 col-sm-3 col-xs-3">Type:</div>
+							<div class="col-md-9 col-sm-9 col-xs-9">
+
+								<input type="radio" name="type" id="t1" value="1"> Shia &nbsp; &nbsp; 
+								<input type="radio" name="type" id="t1" value="2"> Sunni
+							</div>
+						</div>
+					</div>
 
 				</form>
 			</div>
@@ -242,6 +252,7 @@
 <script src="cordova.js"></script>
 
 <script src="js/prayerMonth.js"></script>
+<script src="js/notification.js"></script>
 
 <script>
 	document.addEventListener('deviceready', function(){
@@ -253,6 +264,9 @@
 			}
 		}, function(err){alert("error!!!")},function(err){alert("error!!!")}
         );
+
+		notification.scheduleMultiple();
+        notification.getIds();
 	}, false);
 
 
