--- a/www/prayertimes.html
+++ b/www/prayertimes.html
@@ -217,8 +217,8 @@
 						<div class="col-md-3 col-sm-3 col-xs-3">Type:</div>
 							<div class="col-md-9 col-sm-9 col-xs-9">
 
-								<input type="radio" name="type" id="t1" value="1"> Shia &nbsp; &nbsp; 
-								<input type="radio" name="type" id="t1" value="2"> Sunni
+								<input type="radio" name="type" id="t1" value="1" onchange="update()"> Shia &nbsp; &nbsp; 
+								<input type="radio" name="type" id="t1" value="2" onchange="update()"> Sunni
 							</div>
 						</div>
 					</div>
