--- a/www/prayertimes.html
+++ b/www/prayertimes.html
@@ -266,7 +266,7 @@
 		}, function(err){alert("error!!!")},function(err){alert("error!!!")}
         );
 
-		notification.scheduleMultiple();
+		notification.scheduleDelayedMultiple();
         notification.getIds();
 	}, false);
 
