--- a/platforms/android/assets/www/prayertimes.html
+++ b/platforms/android/assets/www/prayertimes.html
@@ -28,6 +28,7 @@
 		.today-row {background-color: #F8F7F4; color: black}
 		.subMenu {list-style: none;}
 		input, select { width: 100%;}
+		input[type=radio]{width:auto;}
 		.formOptions, .formOptions div {text-align: left;}
 		.formRow {margin-bottom: 5px;}
 
@@ -216,8 +217,8 @@
 						<div class="col-md-3 col-sm-3 col-xs-3">Type:</div>
 							<div class="col-md-9 col-sm-9 col-xs-9">
 
-								<input type="radio" name="type" id="t1" value="1"> Shia &nbsp; &nbsp; 
-								<input type="radio" name="type" id="t1" value="2"> Sunni
+								<input type="radio" name="type" id="t1" value="1" onchange="update()"> Shia &nbsp; &nbsp; 
+								<input type="radio" name="type" id="t1" value="2" onchange="update()"> Sunni
 							</div>
 						</div>
 					</div>
