--- a/www/prayertimes.html
+++ b/www/prayertimes.html
@@ -233,7 +233,7 @@
 					<td><a href="javascript:displayMonth(+1)" class="arrow">&gt;&gt;</a></td>
 				</tr>
 			</table>
-			<div id="city"></div>
+			<div id="city">City:</div>
 			<br/>
 			<table id="timetable" class="timetable">
 				<tbody></tbody>
@@ -268,10 +268,10 @@
 				var geocoder = new google.maps.Geocoder();
 				geocoder.geocode({'latLng': pos}, function(results, status){
 					if (results[1]){
-						document.getElementById("city").value = results[1].formatted_address;
+						document.getElementById("city").innerText = "City: " + results[1].formatted_address;
 					}
 					else{
-						document.getElementById("city").value = "Error finding city";
+						document.getElementById("city").innerText = "Error finding city";
 					}
 				})
 
