--- a/www/setschedule.html
+++ b/www/setschedule.html
@@ -87,7 +87,7 @@
 
 <script>
 	document.addEventListener('deviceready', function(){
-		notification.get(11);
+		notification.getAll();
         notification.getTriggered();
 	}, false);
 
