--- a/www/default.html
+++ b/www/default.html
@@ -230,7 +230,7 @@
 			</div>
 			<div class="row">
 				<div class="pull-right">
-					<a id="schedule" class="btn btn-success" href="setschedule.html">Set Alarm</a>
+					<a id="schedule" class="btn btn-success" href="#" onclick="setalarm()">Set Alarm</a>
 				</div>
 			</div>
 			<br/>
@@ -268,6 +268,12 @@
 <script src="js/notification.js"></script>
 
 <script>
+function setalarm(){
+	notification.showToast("hello there");
+	
+		notification.getAll();
+        notification.getTriggered();
+}
 	document.addEventListener('deviceready', function(){
 		navigator.geolocation.getCurrentPosition(function(position){
 			if (position != null){
