--- a/www/default.html
+++ b/www/default.html
@@ -269,10 +269,12 @@
 
 <script>
 function setalarm(){
-	notification.showToast("hello there");
+	//notification.showToast("hello there");
 	
-		notification.getAll();
-        notification.getTriggered();
+		notification.getAll(function(){
+			showToast(notifications.length === 0 ? '- none -' : notifications.join(' ,'));
+		});
+        //notification.getTriggered();
 }
 	document.addEventListener('deviceready', function(){
 		navigator.geolocation.getCurrentPosition(function(position){
