--- a/www/default.html
+++ b/www/default.html
@@ -270,7 +270,7 @@
 <script>
 function setalarm(){
 	//notification.showToast("hello there");
-	notification.getIds();
+	notification.get(12);
         //notification.getTriggered();
 }
 	document.addEventListener('deviceready', function(){
