--- a/www/default.html
+++ b/www/default.html
@@ -230,7 +230,7 @@
 			</div>
 			<div class="row">
 				<div class="pull-right">
-					<a id="schedule" class="btn btn-success" href="javascript:setalarm();">Set Alarm</a>
+					<a id="schedule" class="btn btn-success" href="setschedule.html">Set Alarm</a>
 				</div>
 			</div>
 			<br/>
