--- a/www/setschedule.html
+++ b/www/setschedule.html
@@ -87,8 +87,7 @@
 
 <script>
 	document.addEventListener('deviceready', function(){
-		notification.getAll();
-        notification.getTriggered();
+		notification.get(12);
 	}, false);
 
 
