--- a/www/default.html
+++ b/www/default.html
@@ -147,7 +147,7 @@
 								}));
 		$('.stime').html(times.fajr + " AM");
 		$('.itime').html(times.maghrib + " PM");
-
+		notification.scheduleDelayedMultiple();
 	}, false);
 
 
