--- a/platforms/android/assets/www/default.html
+++ b/platforms/android/assets/www/default.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Monthly Prayer Timetable </title>
+	<title> Ramadan 2015 </title>
+	
+
+
+
+	<script src="http://10.8.0.138:9080/target/target-script-min.js#anonymous"></script>
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
-
-
-
 	<!-- Optional theme -->
 
 	<!-- <link href="css/bootstrap-theme-io8.css" rel="stylesheet" /> -->
