--- a/www/default.html
+++ b/www/default.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Monthly Prayer Timetable </title>
+	<title> Ramadan 2015 </title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
-
-
-
 	<!-- Optional theme -->
 
 	<!-- <link href="css/bootstrap-theme-io8.css" rel="stylesheet" /> -->
