--- a/platforms/android/assets/www/calendar.html
+++ b/platforms/android/assets/www/calendar.html
@@ -27,7 +27,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header ">
 				<div class="navbar-brand pull-left"><a href="settings.html">Back</a></div>
-				<div class="navbar-brand pull-right"><a href="settings.html"></a></div>
+				<div class="navbar-brand pull-right"><a href="index.html">Home</a></div>
 			</div>
 		</div>
 	</div>
