--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,37 +11,7 @@
 
 	<!-- Ramadan references -->
 	<link href="css/index.css" rel="stylesheet" />
-	<style>
-		body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #012345; text-align: center;}
-		pre {font-family: courier, serif, size: 10pt; margin: 0px 8px;}
-		input {font-size: 12px;}
-		.header {background:#eef; border-bottom: 1px solid #ddd; padding: 7px;}
-		.caption {font-size: 20px; color: #d95722; text-align: center; width: 10em;}
-		.arrow {font-weight: bold; text-decoration: none; color: #3D3D3D; }
-		.arrow:hover {text-decoration: underline;}
-		.command {font-weight: bold; text-decoration: none; color: #AAAAAA; }
-		.command:hover {text-decoration: underline;}
-		.timetable {border-width: 1px; border-style: outset; border-collapse: collapse; border-color: gray; margin: 0 auto;}
-		.timetable td {border-width: 1px; border-spacing: 1px; padding: 1px; border-style: inset; border-color: #CCCCCC;}
-		.head-row {color: black; background-color: #eef;}
-		.today-row {background-color: #F8F7F4; color: black}
-		.subMenu {list-style: none;}
-		input, select { width: 100%;}
-		input[type=radio]{width:auto;}
-		.formOptions, .formOptions div {text-align: left;}
-		.formRow {margin-bottom: 5px;}
-
-		.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
-  position: relative;
-  min-height: 1px;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-
-
-
-	</style>
+	
 		
 </head>
 
@@ -116,39 +86,43 @@
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
 
+
+<script>
+	document.addEventListener('deviceready', function(){
+		// bDOMLoaded = true;
+  //   	ClockInit();
+
+    	var _lat = window.localStorage.getItem("latitude");
+		var _lng = window.localStorage.getItem("longitude");
+		var _zip = window.localStorage.getItem("zip");
+		var _dst = window.localStorage.getItem("dst");
+		var _timezone = window.localStorage.getItem("timezone");
+		var _method = window.localStorage.getItem("method");
+		var _type = window.localStorage.getItem("type");
+		var _format = '12hNS';//'24h'
+		var prayTimes = new PrayTimes(_method);
+		var times = prayTimes.getTimes(new Date(), [_lat, _lng], _timezone, _dst, _format);
+		console.log(times);
+		$(".timeMain").text(new Date().toLocaleDateString("en-US",{
+								    weekday: "long", year: "numeric", month: "short",
+								    day: "numeric"
+								}));
+		$('.stime').html(times.fajr + " AM");
+		$('.itime').html(times.maghrib + " PM");
+		notification.scheduleDelayedMultiple();
+	}, false);
+
+
+</script>
+
+
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
 <script type="text/javascript" src="js/clock.js"></script>
 <script type="text/javascript" src="js/PrayTimes.js"></script>
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
 
-<script>
-	document.addEventListener('deviceready', function(){
-		bDOMLoaded = true;
-    	ClockInit();
 
-  //   	var _lat = window.localStorage.getItem("latitude");
-		// var _lng = window.localStorage.getItem("longitude");
-		// var _zip = window.localStorage.getItem("zip");
-		// var _dst = window.localStorage.getItem("dst");
-		// var _timezone = window.localStorage.getItem("timezone");
-		// var _method = window.localStorage.getItem("method");
-		// var _type = window.localStorage.getItem("type");
-		// var _format = '12hNS';//'24h'
-		// var prayTimes = new PrayTimes(_method);
-		// var times = prayTimes.getTimes(new Date(), [_lat, _lng], _timezone, _dst, _format);
-		// console.log(times);
-		// $(".timeMain").text(new Date().toLocaleDateString("en-US",{
-		// 						    weekday: "long", year: "numeric", month: "short",
-		// 						    day: "numeric"
-		// 						}));
-		// $('.stime').html(times.fajr + " AM");
-		// $('.itime').html(times.maghrib + " PM");
-		// notification.scheduleDelayedMultiple();
-	}, false);
-
-
-</script>
 
 </body>
 </html>
