--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,10 @@
 
 	<!-- Ramadan references -->
 	<link href="css/index.css" rel="stylesheet" />
-	
+	<style type="text/css">
+	        body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #012345; text-align: center;}
+
+</style>
 		
 </head>
 
@@ -89,8 +92,8 @@
 
 <script>
 	document.addEventListener('deviceready', function(){
-		// bDOMLoaded = true;
-  //   	ClockInit();
+		bDOMLoaded = true;
+    	ClockInit();
 
     	var _lat = window.localStorage.getItem("latitude");
 		var _lng = window.localStorage.getItem("longitude");
