--- a/www/settings.html
+++ b/www/settings.html
@@ -230,7 +230,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="js/bootstrap.js"></script>
 <script src="cordova.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&key=AIzaSyBRp14Q-8MP698RmK6QW7VbHzpheI6Q0PA"></script>
 
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
