--- a/www/settings.html
+++ b/www/settings.html
@@ -194,7 +194,7 @@
 			</div>
 			 <div class="row">
 				<div class="pull-right">
-					<a id="schedule" class="btn btn-success" href="setschedule.html">Set Alarm</a>
+					<a id="schedule" class="btn btn-success" href="javascript:setalarm();">Set Alarm</a>
 				</div>
 			</div>
 			<!-- <div class="row">
@@ -245,49 +245,7 @@
 
 <script>
 
-function saveAndBack(){
-	saveSettings();
-	window.location.href="index.html";
 
-}
-
-function saveAndCalendar(){
-	saveSettings();
-	window.location.href="calendar.html";
-
-}
-
-
-function setalarm(){
-	//notification.showToast("hello there");
-	notification.get(12);
-        //notification.getTriggered();
-}
-
-function getLocation(){
-	navigator.geolocation.getCurrentPosition(function(position){
-			if (position != null){
-				document.getElementById("latitude").value = position.coords.latitude;
-				document.getElementById("longitude").value = position.coords.longitude;
-				
-
-				// var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-				// var geocoder = new google.maps.Geocoder();
-				// geocoder.geocode({'latLng': pos}, function(results, status){
-				// 	if (results[1]){
-				// 		document.getElementById("city").innerText = "City: " + results[1].formatted_address;
-				// 	}
-				// 	else{
-				// 		document.getElementById("city").innerText = "Error finding city";
-				// 	}
-				// })
-				updateToday();
-				//update(false, false);
-			}
-		}, function(err){alert("error!!!")},{timeout:10000, enableHighAccuracy: true, maximumAge:75000}
-        );
-
-}
 	document.addEventListener('deviceready', function(){
 		fetchSettings();
 		getLocation();
