--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -74,10 +74,10 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12" style="text-align:center;">
-			<img src="img/ad_logo.jpg" width="20%"/><br>
+			<a href="javascript:openDeviceBrowser('http://www.gtaproperty4sale.com');"><img src="img/ad_logo.jpg" width="20%"/></a><br>
 				<span style="font-size:12pt;">HomeLife/Miracle Realty Ltd. Brokerage</span><br>
 				<strong>Syed Mehdi</strong><br>
-				<a href="www.gtaproperty4sale.com" target="_blank">www.gtaproperty4sale.com</a><br>
+				<a href="javascript:openDeviceBrowser('http://www.gtaproperty4sale.com');">www.gtaproperty4sale.com</a><br>
 				<a href="mailto:cozyhomes123@gmail.com">cozyhomes123@gmail.com</a><br>
 				<a href="tel:647-232-5544">647-232-5544</a>
 			</div>	
@@ -130,6 +130,7 @@
 <script type="text/javascript" src="js/PrayTimes.js"></script>
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
+<script src="js/app.js"></script>
 
 
 
