--- a/www/settings.html
+++ b/www/settings.html
@@ -242,7 +242,7 @@
 
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
-
+<script src="js/app.js"></script>
 <script>
 
 
