--- a/www/calendar.html
+++ b/www/calendar.html
@@ -64,7 +64,7 @@
 
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
-
+<script src="js/app.js"></script>
 <script>
 
 // function saveAndBack(){
