--- a/www/setschedule.html
+++ b/www/setschedule.html
@@ -46,7 +46,7 @@
 
 <script src="js/prayerMonth.js"></script>
 <script src="js/notification.js"></script>
-
+<script src="js/app.js"></script>
 <script>
 	document.addEventListener('deviceready', function(){
 		notification.get(12);
