--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,8 @@
 	<!-- Ramadan references -->
 	<link href="css/index.css" rel="stylesheet" />
 	<style type="text/css">
-	        body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #012345; text-align: center;}
-
+	        /*body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #012345; text-align: center;}
+*/
 </style>
 		
 </head>
@@ -78,7 +78,7 @@
 				<span style="font-size:12pt;">HomeLife/Miracle Realty Ltd. Brokerage</span><br>
 				<strong>Syed Mehdi</strong><br>
 				<a href="javascript:openDeviceBrowser('http://www.gtaproperty4sale.com');">www.gtaproperty4sale.com</a><br>
-				<a href="mailto:cozyhomes123@gmail.com">cozyhomes123@gmail.com</a><br>
+				<a href="mailto:cozyhomes123@gmail.com?subject=Enquiry from Ramadan App">cozyhomes123@gmail.com</a><br>
 				<a href="tel:647-232-5544">647-232-5544</a>
 			</div>	
 		</div>
