--- a/www/calendar.html
+++ b/www/calendar.html
@@ -34,7 +34,7 @@
 	<div class="header contentBody">
 
 
-		<div id="city">City:</div>
+		<div id="city" style="text-align:center;">City:</div>
 
 		<br/>
 		<table align="center">
@@ -50,7 +50,7 @@
 			<tbody></tbody>
 		</table>
 
-		<div align="center" style="margin-top: 7px">
+		<div align="center" style="margin-top: 7px;text-align:center;">
 			Source: <a href="http://praytimes.org/" class="command">PrayTimes.org</a> |
 			Time Format: <a id="time-format" href="javascript:switchFormat(1)" title="Change clock format" class="command"></a>
 		</div>
