--- a/www/settings.html
+++ b/www/settings.html
@@ -38,9 +38,15 @@
 					<div class="col-md-3 col-sm-6 col-xs-6">
 							<div class="col-md-6 col-sm-6 col-xs-6 formLabel">Postal:</div>
 							<div class="col-md-6 col-sm-6 col-xs-6">
-								<input type="text" id="zip" onchange="updateByZip()"/> <a href="javascript:getLocation();">&lt;</a>
+								<div class="input-group ">
+                                    <input type="text" id="zip" onchange="updateByZip()"/>
+                                    <span class="input-group-addon"><a href="javascript:getLocation();">&lt;</a></span>
+                                </div>
+								 
 							</div>
 						</div>
+
+
 
 
 						<div class="col-md-3 col-sm-6 col-xs-6 formRow">
